Booking Meta Tag

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,8 @@
     %meta{:charset => "utf-8"}/
     %meta{:content => "IE=Edge,chrome=1", "http-equiv" => "X-UA-Compatible"}/
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
+    %meta{:content => "8cc70acfb49616d39aa9230054e308f44c80f127", :name => "B-verify"}/
+
     %title= content_for?(:title) ? yield(:title) : "Oualle"
     = csrf_meta_tags
     = stylesheet_link_tag "application", :media => "all"
