--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,7 +11,9 @@
  * It is generally better to create a new file per style scope.
  *
  *= require bootstrap_and_overrides
-
+ *= require icomoon
+ *= styles
+ *= mystyles
  *= require_tree .
  *= require_self
  */
