--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,9 @@
     %meta{:content => "IE=Edge,chrome=1", "http-equiv" => "X-UA-Compatible"}/
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
     %meta{:content => "8cc70acfb49616d39aa9230054e308f44c80f127", :name => "B-verify"}/
+    %meta{:content => "Template, html, premium, themeforest", :name => "keywords"}/
+    %meta{:content => "Traveler - Premium template for travel companies", :name => "description"}/
+    %meta{:content => "Tsoy", :name => "author"}/
 
     %title= content_for?(:title) ? yield(:title) : "Oualle"
     = csrf_meta_tags
@@ -30,34 +33,7 @@
     /[if lt IE 9]
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js" type="text/javascript"></script>
   %body
-    .navbar.navbar-default.navbar-static-top
-      .container
-        %button.navbar-toggle{"data-target" => ".navbar-responsive-collapse", "data-toggle" => "collapse", :type => "button"}
-          %span.icon-bar
-          %span.icon-bar
-          %span.icon-bar
-        %a.navbar-brand{:href => "#"} Oualle
-        .navbar-collapse.collapse.navbar-responsive-collapse
-          %ul.nav.navbar-nav
-            %li= link_to "Link1", "/path1"
-            %li= link_to "Link2", "/path2"
-            %li= link_to "Link3", "/path3"
-    .container
-      .row
-        .col-lg-9
-          = bootstrap_flash
-          = yield
-        .col-lg-3
-          .well.sidebar-nav
-            %h3 Sidebar
-            %ul.nav.nav-list
-              %li.nav-header Sidebar
-              %li= link_to "Link1", "/path1"
-              %li= link_to "Link2", "/path2"
-              %li= link_to "Link3", "/path3"
-          / /.well
-        / /span
-      / /row
-      %footer
-        %p © Company 2018
-    / /container
+    .global-wrap
+      = render partial: 'home/header'
+      = yield
+      = render partial: 'home/footer'
