--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,6 +13,8 @@
     / %link{:href => "//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", :rel => "stylesheet"}/
     %title= content_for?(:title) ? yield(:title) : "Oualle"
     = csrf_meta_tags
+    = javascript_include_tag "application", "data-turbolinks-track" => true
+    = javascript_include_tag '//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'
     = stylesheet_link_tag "application", :media => "all"
     / For third-generation iPad with high-resolution Retina display:
     / Size should be 144 x 144 pixels
@@ -29,8 +31,6 @@
 
     / For all other devices
     / Size should be 32 x 32 pixels
-    = favicon_link_tag 'favicon.ico', :rel => 'shortcut icon'
-    = javascript_include_tag "application"
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js" type="text/javascript"></script>
@@ -39,3 +39,4 @@
       = render partial: 'shared/header'
       = yield
       = render partial: 'shared/footer'
+    = javascript_include_tag "custom.js"
