--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -493,221 +493,12 @@
             .thumb-caption
               %h4.thumb-title Best Travel Agent
               %p.thumb-desc Quisque porta dolor scelerisque gravida commodo in accumsan ullamcorper laoreet nam litora senectus diam sapien hac turpis
+.container
+  = render partial: 'pakistan_destionations'
+
 .bg-holder
   .bg-mask
   .bg-blur{:style => "background-image:url(#{image_path '1280x848.png'});"}
   .bg-content
     .container
-      .gap
-      %h1.text-center.text-white.mb20 Recent Reviews
-      .row.row-wrap
-        .col-md-4
-          / START TESTIMONIAL
-          .testimonial.text-white
-            .testimonial-inner
-              %blockquote
-                %p Eget penatibus hac tortor imperdiet ante elementum tellus vel habitant in laoreet aenean sapien penatibus
-            .testimonial-author
-              = image_tag "50x50.png"
-              %p.testimonial-author-name Alison Mackenzie
-              %cite
-                on
-                %a.text-udl{:href => "#"} Waldorf Astoria
-                hotel in New York
-          / END TESTIMONIAL
-        .col-md-4
-          / START TESTIMONIAL
-          .testimonial.text-white
-            .testimonial-inner
-              %blockquote
-                %p Netus cum ornare massa blandit natoque dui volutpat lacus non volutpat enim praesent lobortis semper
-            .testimonial-author
-              = image_tag "50x50.png"
-              %p.testimonial-author-name Cheryl Gustin
-              %cite
-                on
-                %a.text-udl{:href => "#"} Wellington
-                hotel in New York
-          / END TESTIMONIAL
-        .col-md-4
-          / START TESTIMONIAL
-          .testimonial.text-white
-            .testimonial-inner
-              %blockquote
-                %p Aliquam vulputate velit penatibus elit gravida neque mollis purus vivamus habitasse iaculis nullam cras consectetur
-            .testimonial-author
-              = image_tag "50x50.png"
-              %p.testimonial-author-name Sarah Slater
-              %cite
-                on
-                %a.text-udl{:href => "#"} Holiday
-                hotel in New York
-          / END TESTIMONIAL
-      .gap-small.gap
-.container
-  .gap
-  %h1.text-center.mb20 Last Minute Deals
-  .row.row-wrap
-    .col-md-4
-      .thumb
-        %header.thumb-header
-          %a.hover-img{:href => "#"}
-            = image_tag "800x600.png"
-            %h5.hover-title-center Book Now
-        .thumb-caption
-          %ul.icon-group.text-tiny.text-color
-            %li
-              %i.fa.fa-star
-            %li
-              %i.fa.fa-star
-            %li
-              %i.fa.fa-star
-            %li
-              %i.fa.fa-star
-            %li
-              %i.fa.fa-star-half-empty
-          %h5.thumb-title
-            %a.text-darken{:href => "#"} The Benjamin
-          %p.mb0
-            %small
-              %i.fa.fa-map-marker
-              New York, NY (Chelsea)
-          %p.mb0.text-darken
-            %span.text-lg.lh1em.text-color $394
-            %small avg/night
-    .col-md-4
-      .thumb
-        %header.thumb-header
-          %a.hover-img{:href => "#"}
-            = image_tag "800x600.png"
-            %h5.hover-title-center Book Now
-        .thumb-caption
-          %ul.icon-group.text-tiny.text-color
-            %li
-              %i.fa.fa-star
-            %li
-              %i.fa.fa-star
-            %li
-              %i.fa.fa-star
-            %li
-              %i.fa.fa-star
-            %li
-              %i.fa.fa-star
-          %h5.thumb-title
-            %a.text-darken{:href => "#"} The London NYC
-          %p.mb0
-            %small
-              %i.fa.fa-map-marker
-              New York, NY (Chelsea)
-          %p.mb0.text-darken
-            %span.text-lg.lh1em.text-color $355
-            %small avg/night
-    .col-md-4
-      .thumb
-        %header.thumb-header
-          %a.hover-img{:href => "#"}
-            = image_tag "800x600.png"
-            %h5.hover-title-center Book Now
-        .thumb-caption
-          %ul.icon-group.text-tiny.text-color
-            %li
-              %i.fa.fa-star
-            %li
-              %i.fa.fa-star
-            %li
-              %i.fa.fa-star
-            %li
-              %i.fa.fa-star
-            %li
-              %i.fa.fa-star-half-empty
-          %h5.thumb-title
-            %a.text-darken{:href => "#"} InterContinental New York Barclay
-          %p.mb0
-            %small
-              %i.fa.fa-map-marker
-              Ozone Park, NY (Kennedy Airport (JFK))
-          %p.mb0.text-darken
-            %span.text-lg.lh1em.text-color $213
-            %small avg/night
-    .col-md-4
-      .thumb
-        %header.thumb-header
-          %a.hover-img{:href => "#"}
-            = image_tag "800x600.png"
-            %h5.hover-title-center Book Now
-        .thumb-caption
-          %ul.icon-group.text-tiny.text-color
-            %li
-              %i.fa.fa-star
-            %li
-              %i.fa.fa-star
-            %li
-              %i.fa.fa-star
-            %li
-              %i.fa.fa-star
-            %li
-              %i.fa.fa-star-o
-          %h5.thumb-title
-            %a.text-darken{:href => "#"} Affinia Shelburne
-          %p.mb0
-            %small
-              %i.fa.fa-map-marker
-              Brooklyn, NY (Brooklyn)
-          %p.mb0.text-darken
-            %span.text-lg.lh1em.text-color $238
-            %small avg/night
-    .col-md-4
-      .thumb
-        %header.thumb-header
-          %a.hover-img{:href => "#"}
-            = image_tag "800x600.png"
-            %h5.hover-title-center Book Now
-        .thumb-caption
-          %ul.icon-group.text-tiny.text-color
-            %li
-              %i.fa.fa-star
-            %li
-              %i.fa.fa-star
-            %li
-              %i.fa.fa-star
-            %li
-              %i.fa.fa-star
-            %li
-              %i.fa.fa-star-half-empty
-          %h5.thumb-title
-            %a.text-darken{:href => "#"} New York Hilton Midtown
-          %p.mb0
-            %small
-              %i.fa.fa-map-marker
-              New York, NY (Midtown East)
-          %p.mb0.text-darken
-            %span.text-lg.lh1em.text-color $438
-            %small avg/night
-    .col-md-4
-      .thumb
-        %header.thumb-header
-          %a.hover-img{:href => "#"}
-            = image_tag "800x600.png"
-            %h5.hover-title-center Book Now
-        .thumb-caption
-          %ul.icon-group.text-tiny.text-color
-            %li
-              %i.fa.fa-star
-            %li
-              %i.fa.fa-star
-            %li
-              %i.fa.fa-star
-            %li
-              %i.fa.fa-star
-            %li
-              %i.fa.fa-star-half-empty
-          %h5.thumb-title
-            %a.text-darken{:href => "#"} Wellington Hotel
-          %p.mb0
-            %small
-              %i.fa.fa-map-marker
-              New York, NY (Downtown - Wall Street)
-          %p.mb0.text-darken
-            %span.text-lg.lh1em.text-color $210
-            %small avg/night
-  .gap.gap-small
+      = render partial: 'reviews'  
