--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,8 +12,8 @@
     %title= content_for?(:title) ? yield(:title) : "Tripscrave"
     = csrf_meta_tags
     = #javascript_include_tag '//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'
-    = javascript_include_tag "application", "data-turbolinks-track" => true
-    = stylesheet_link_tag "application", :media => "all", 'data-turbolinks-track' => true
+    = javascript_include_tag "application", "data-turbolinks-track" => true, async: true
+    = stylesheet_link_tag "application", :media => "all", 'data-turbolinks-track' => true, async: true
     / For third-generation iPad with high-resolution Retina display:
     / Size should be 144 x 144 pixels
     / = favicon_link_tag 'apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144'
