--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,7 +12,7 @@
  *
  *= require bootstrap_and_overrides
  *= require bootstrap
- *= require font-awesome
+ * require font-awesome
  *= require icomoon
  *= require styles
  *= require mystyles
