--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -37,4 +37,4 @@
       = render partial: 'shared/header'
       = yield
       = render partial: 'shared/footer'
-    = javascript_include_tag "custom.js"
+    =# javascript_include_tag "custom.js"
