Removed Extra content from homepage

--- a/app/views/home/_pakistan_destionations.html.haml
+++ b/app/views/home/_pakistan_destionations.html.haml
@@ -9,7 +9,7 @@
             %h5.hover-title-center Book Now
         .thumb-caption          
           %h5.thumb-title
-            %a.text-darken{:href => "#"} Dubai
+            = link_to "Dubai", 'https://tripscrave.comencia.com/search/result?destinationString=+Dubai%2C+United+Arab+Emirates&site_supply=booking_dot_com&latitude=25.1951748673&longitude=55.2726778015&geographyId=6053839&regionType=A-CITY&destinationId=-782831&room1=2&arrivalDate=04%2F30%2F2018&departureDate=05%2F01%2F2018&adults_count_room_1=2&children_count_room_1=0&infant_count_room_1=0', class: 'text-darken'
     
     .col-md-4
       .thumb
@@ -29,7 +29,7 @@
             %h5.hover-title-center Book Now
         .thumb-caption
           %h5.thumb-title
-            %a.text-darken{:href => "#"} Kuala Lumpur
+            = link_to 'Kuala Lumpur', 'https://tripscrave.comencia.com/search/result?destinationString=+Kuala+Lumpur%2C+Malaysia&site_supply=booking_dot_com&latitude=3.1540507508&longitude=101.7077143354&geographyId=1951&regionType=A-CITY&destinationId=-2403010&room1=2&arrivalDate=04%2F30%2F2018&departureDate=05%2F01%2F2018&adults_count_room_1=2&children_count_room_1=0&infant_count_room_1=0', class: 'text-darken'
           
     .col-md-4
       .thumb
@@ -39,7 +39,7 @@
             %h5.hover-title-center Book Now
         .thumb-caption
           %h5.thumb-title
-            %a.text-darken{:href => "#"} Bangkok
+            = link_to 'Bangkok', 'https://tripscrave.comencia.com/search/result?destinationString=+Bangkok%2C+Thailand&site_supply=booking_dot_com&latitude=13.7558383942&longitude=100.5056381226&geographyId=604&regionType=A-CITY&destinationId=-3414440&room1=2&arrivalDate=04%2F30%2F2018&departureDate=05%2F01%2F2018&adults_count_room_1=2&children_count_room_1=0&infant_count_room_1=0', class: 'text-darken'
         
     .col-md-4
       .thumb
@@ -49,7 +49,7 @@
             %h5.hover-title-center Book Now
         .thumb-caption          
           %h5.thumb-title
-            %a.text-darken{:href => "#"} Lahore
+            = link_to 'Lahore', 'https://tripscrave.comencia.com/search/result?destinationString=+Lahore%2C+Pakistan&site_supply=booking_dot_com&latitude=31.56219&longitude=74.32285&geographyId=2068&regionType=A-CITY&destinationId=-2767043&room1=2&arrivalDate=04%2F30%2F2018&departureDate=05%2F01%2F2018&adults_count_room_1=2&children_count_room_1=0&infant_count_room_1=0', class: 'text-darken'
           
     .col-md-4
       .thumb
@@ -59,5 +59,5 @@
             %h5.hover-title-center Book Now
         .thumb-caption          
           %h5.thumb-title
-            %a.text-darken{:href => "#"} Karachi
+            = link_to 'Karachi', 'https://tripscrave.comencia.com/search/result?destinationString=+Karachi%2C+Pakistan&site_supply=booking_dot_com&latitude=24.8666992188&longitude=67.0500030518&geographyId=1809&regionType=A-CITY&destinationId=-2764584&room1=2&arrivalDate=04%2F30%2F2018&departureDate=05%2F01%2F2018&adults_count_room_1=2&children_count_room_1=0&infant_count_room_1=0', class: 'text-darken'
   .gap.gap-small
