--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -5,7 +5,7 @@
         = link_to root_path do
           = image_tag "logo-invert.png"
           / %img{:alt => "Image Alternative text", :src => "", :title => "Image Title"}/
-        %p.mb20 Booking, reviews and advices on hotels, resorts, flights, vacation rentals, travel packages, and lots more!
+        %p.mb20 Booking, reviews and advices on hotels, resorts and lots more!
         %ul.list.list-horizontal.list-space
           %li
             %a.fa.fa-facebook.box-icon-normal.round.animate-icon-bottom-to-top{:href => "#"}
@@ -18,25 +18,19 @@
           %li
             %a.fa.fa-pinterest.box-icon-normal.round.animate-icon-bottom-to-top{:href => "#"}
       .col-md-3
-        %h4 Newsletter
-        %form
-          %label Enter your E-mail Address
-          %input.form-control{:type => "text"}/
-          %p.mt5
-            %small *We Never Send Spam
-          %input.btn.btn-primary{:type => "submit", :value => "Subscribe"}/
+        / %h4 Newsletter
+        / %form
+        /   %label Enter your E-mail Address
+        /   %input.form-control{:type => "text"}/
+        /   %p.mt5
+        /     %small *We Never Send Spam
+        /   %input.btn.btn-primary{:type => "submit", :value => "Subscribe"}/
       .col-md-2
         %ul.list.list-footer
           %li
             %a{:href => "#"} About US
           %li
-            %a{:href => "#"} Press Centre
-          %li
-            %a{:href => "#"} Best Price Guarantee
-          %li
             %a{:href => "#"} Travel News
-          %li
-            %a{:href => "#"} Jobs
           %li
             %a{:href => "#"} Privacy Policy
           %li
@@ -47,5 +41,5 @@
         %h4 Have Questions?
         %h4.text-color +1-202-555-0173
         %h4
-          %a.text-color{:href => "#"} support@traveler.com
+          %a.text-color{:href => "#"} development@oualle.com
         %p 24/7 Dedicated Customer Support
