--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -26,27 +26,27 @@
                   USD $
                   %i.fa.fa-angle-down
                   %i.fa.fa-angle-up
-                / %ul.list.nav-drop-menu
-                /   %li
-                /     %a{:href => "#"}
-                /       EUR
-                /       %span.right €
-                /   %li
-                /     %a{:href => "#"}
-                /       GBP
-                /       %span.right £
-                /   %li
-                /     %a{:href => "#"}
-                /       JPY
-                /       %span.right 円
-                /   %li
-                /     %a{:href => "#"}
-                /       CAD
-                /       %span.right $
-                /   %li
-                /     %a{:href => "#"}
-                /       AUD
-                /       %span.right A$
+                %ul.list.nav-drop-menu
+                  %li
+                    %a{:href => "#"}
+                      EUR
+                      %span.right €
+                  %li
+                    %a{:href => "#"}
+                      GBP
+                      %span.right £
+                  %li
+                    %a{:href => "#"}
+                      JPY
+                      %span.right 円
+                  %li
+                    %a{:href => "#"}
+                      CAD
+                      %span.right $
+                  %li
+                    %a{:href => "#"}
+                      AUD
+                      %span.right A$
               / %li.top-user-area-lang.nav-drop
               /   %a{:href => "#"}
               /     = image_tag "flags/32/uk.png"
