--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -35,7 +35,7 @@
                     %label Where are you going?
                     = text_field_tag 'destination', '', class: 'typeahead form-control', placeholder: "City, Airport, Point of Interest or U.S. Zip Code"
 
-                  .input-daterange{"data-date-format" => "M d, D"}
+                  .input-daterange{"data-date-format" => "D, M d yyyy"}
                     .row
                       .col-md-3
                         .form-group.form-group-lg.form-group-icon-left
@@ -61,14 +61,8 @@
                               = radio_button_tag 'nr_rooms', '3', false
                               3
                             %label.btn.btn-primary
-                              = radio_button_tag 'nr_rooms', '4', false
-                              4
-                            %label.btn.btn-primary
-                              = radio_button_tag 'nr_rooms', '5', false
-                              5
-                            %label.btn.btn-primary
                               = radio_button_tag 'nr_rooms', '', false
-                              5+
+                              3+
                           = select_tag 'nr_rooms',"<option disabled selected value> -- select rooms -- </option><option>1</option><option>1</option><option value=2>2</option><option value=3>3</option><option value=4>4</option><option value=5>5</option><option value=6>6</option><option value=7>7</option><option value=8>8</option>".html_safe, class: 'form-control hidden'
                           
                       .col-md-3
